--- a/项目总结.md
+++ b/项目总结.md
@@ -244,4 +244,23 @@ location.reload();//重新加载页面
 ```js
 通过this.$route获取当前路由信息
 ```
+# 15.git不能提交github
+报错：openSSL SSL_connect:Connection was reset in connection
+这是服务器的SSL证书没有经过第三方机构的签署，所以报错。
+解决方法：git config --global http.sslVerify "false"
 
+# 16.更改element ui table的滚动条
+```html
+//设置滑槽的样式
+/deep/.el-table__body-wrapper::-webkit-scrollbar {
+  width: 6px; // 横向滚动条
+  height: 10px; // 纵向滚动条 必写
+  background-color: #fff;
+  margin-bottom: 2px;
+}
+//设置滑块的样式
+/deep/ .el-table__body-wrapper::-webkit-scrollbar-thumb {
+  background-color: #2074fa;
+  border-radius: 2px;
+}
+```
