--- a/项目总结.md
+++ b/项目总结.md
@@ -284,3 +284,19 @@ location.reload();//重新加载页面
     left: 50%;
     transform: translateY(-50%) translateX(-50%);
 ```
+
+# 19 两个span 字体大小不一，同时垂直居中
+```js
+  .box{
+    display:table
+
+    span:first-child{
+      display:table-cell
+      vertical-align:middle
+    }
+    span:last-child{
+      display:table-cell
+      vertical-align:middle
+    }
+  }
+```
