--- a/项目总结.md
+++ b/项目总结.md
@@ -291,12 +291,33 @@ location.reload();//重新加载页面
     display:table
 
     span:first-child{
-      display:table-cell
       vertical-align:middle
     }
     span:last-child{
-      display:table-cell
       vertical-align:middle
     }
   }
 ```
+
+# 20.vue中事件对象+事件委派
+```js
+  <ul @mouseropver='test'>
+    <li v-for="(item,index) in list" :key="index">
+  </ul>
+
+  test(e){
+    console.log('e',e)
+    //此时的事件对根据子元素绑定的 :key 来定
+    //如果绑定的是index 则事件对象e是index 0 ,1,2,3......
+    //如果绑定的是item 则事件对象e是真正的事件对象event包含事件发生时的一切信息
+  }
+```
+
+# 21.中文输入法中使用英文标点
+  搜过输入法->设置->
+  ![sougou](/img/sougou.jpg)
+
+# 22.数据共享
+1.提升到全局作用于
+
+2.将数据保存在一个对象中
