--- a/项目总结.md
+++ b/项目总结.md
@@ -324,3 +324,30 @@ location.reload();//重新加载页面
 
 # 23.SEO
 search Engine Optimization  搜索引擎优化
+
+# 24.移动端适配插件postCss
+```html
+//自动将px换算成rem
+postcss: {
+  plugins: [
+    require("postcss-plugin-px2rem")({
+      rootValue: 100,
+      exclude: /(node_module)/,
+      mediaQuery: true,
+      selectorBlackList: [
+        "html",
+        "mint-",
+        "mt-",
+        "mpvue-",
+        "calendar",
+        "iconfont"
+      ],
+      propBlackList: ["border"]
+    }),
+    require("autoprefixer")({ browsers: ["Android >= 4.0", "iOS >= 7"] })
+  ]
+}
+
+//配合自适应的font-size比例,设计稿多少,写多少px即可,不需要换算
+
+```
