--- a/项目总结.md
+++ b/项目总结.md
@@ -21,26 +21,26 @@
 
 # 4.sessionStorage
 
-```js
+```html
 在sessionStorage中存储的都是字符串格式(json)，
 window.sessionStorage.setItem("manger"，this.manager)向其中保存的值的时候可以不用转成json格式，但是window.sessionStorage.getItem("manger")取值的时候取出的是json格式的数据，必须进行格式转化
 ```
 
 #  5.路由跳转时，页面跳转，路径显示不完整(没有当前页的路由)
 
-```js
+```html
 原因：跳转时使用了a标签，标签中有href='#'
 ```
 
 # 6.路由守卫
 
-```js
+```html
 文档地址：https://router.vuejs.org/zh/
 ```
 
 
 
-```js
+```html
 1.全局前置守卫
 	router.beforeEach((to, from, next) => {
         document.title = to.meta.title || '卖座电影';
@@ -69,14 +69,14 @@ router.beforeEach((to,from,next)=>{
 })
 ```
 
-```js
+```html
 2.全局后置守卫
 	 router.afterEach((to, from) => {
       //不接受next函数
    })
 ```
 
-```js
+```html
 3.路由独享守卫(只作用于被设置的守卫路由)
 	beforeEnter: (to, from, next) => {
     if (to.meta.needLogin && !$store.state.isLogin) {
@@ -89,7 +89,7 @@ router.beforeEach((to,from,next)=>{
   }
 ```
 
-```js
+```html
 4.组件内守卫
 	//进入路由前调用
 在渲染该组件的对应路由被 confirm 前调用
@@ -114,6 +114,7 @@ router.beforeEach((to,from,next)=>{
     
 这个离开守卫通常用来禁止用户在还未保存修改前突然离开。该导航可以通过 next(false) 来取消。
 可以访问组件实例 this  
+//注意点:这里使用箭头函数会导致this的指向,不指向vue实例
   3. beforeRouteLeave: (to, from, next) => {
       if (confirm("你确定要离开吗") == true) {
         next();
@@ -125,7 +126,7 @@ router.beforeEach((to,from,next)=>{
 
 # 7.防止定时器重复调用
 
-```js
+```html
 data(){
   return{
     time:''
@@ -143,7 +144,7 @@ methods:{
 
 # 8.如何利用computed和watch同时监视对个属性
 
-```js
+```html
 原理：类似监视对象
 
 data(){
@@ -175,7 +176,7 @@ watch:{
 
 # 9.如何判断一个对象是否拥有某个属性
 
-```js
+```html
 let obj={
   name:'ls'
 }
@@ -185,7 +186,7 @@ obj.hasOwnProperty('name')
 
 # 10.localStorage
 
-```js
+```html
 [window].localStorage.setItem('xx')
 [window].localStorage.getItem('xx')
 
@@ -195,7 +196,7 @@ localStorage.clear()
 
 # 11.字符串转变量
 
-```js
+```html
 <input v-model="text" @click="getText('text')">
 <input v-model="text1" @click="getText('text1')">
 <input v-model="text2" @click="getText('text2')">
@@ -217,7 +218,7 @@ methods:{
 
 # 12.过滤器可以使用的地方
 
-```js
+```html
 1.插值表达式
 {{ test | formatTest }}
 2.冒号绑定的值
@@ -229,7 +230,7 @@ methods:{
 
 # 13.返回上一级
 
-```js
+```html
 window.history.go(-1); //返回上一页
 
 window.history.back(); //返回上一页
@@ -241,7 +242,7 @@ location.reload();//重新加载页面
 
 # 14.当前路由信息
 
-```js
+```html
 通过this.$route获取当前路由信息
 ```
 # 15.git不能提交github
@@ -265,7 +266,7 @@ location.reload();//重新加载页面
 }
 ```
 # 17 解决动态路由组件传值，组件复用，组件不刷新
-```js
+```html
   <router-view :key="activeData"></router-view>
   为router-view 添加一个动态的key值
   computed: {
@@ -278,7 +279,7 @@ location.reload();//重新加载页面
 ```
 
 # 18 div自适应高度居中
-```js
+```html
     position: absolute;
     top: 50%;
     left: 50%;
@@ -286,7 +287,7 @@ location.reload();//重新加载页面
 ```
 
 # 19 两个span 字体大小不一，同时垂直居中
-```js
+```html
   .box{
     display:table
 
@@ -300,7 +301,7 @@ location.reload();//重新加载页面
 ```
 
 # 20.vue中事件对象+事件委派
-```js
+```html
   <ul @mouseropver='test'>
     <li v-for="(item,index) in list" :key="index">
   </ul>
@@ -350,4 +351,89 @@ postcss: {
 
 //配合自适应的font-size比例,设计稿多少,写多少px即可,不需要换算
 
+```
+
+
+# 25.classList
+```html
+  classList是元素对象的一个属性,用来操作元素的class类
+
+  1.add 增加类型
+  2.remove 移除类名
+  3.contains 是否包含指定的类名
+```
+
+# 26.图片的加载对元素高度的影响
+```html
+  图片加载时需要时间的,所以直接获取图片的宽高设置元素的宽高是无效的,
+  代码执行时,代码执行完但是图片还没加载完,所以获取不到宽高.
+  解决方案:
+    将代码放在window.onload=()=>{}函数中
+    window.onload作用:在资源全部加载完成后才会执行onload函数
+
+```
+
+# 27.js文件暴露对象的区别
+```html
+
+//  1.  js文件这样写
+    function test(){
+    
+    } 
+    
+    // html页面直接使用引入
+    <script src='test.js' >
+    // 并且直接调用
+    test()
+
+// 2. js文件使用匿名函数自调用
+    (function(w) {
+
+    function test(){
+        
+        } 
+      w.test=test
+    })(window)
+
+     // html页面直接使用引入
+     <script src='test.js' >
+     // 并且直接调用
+     test()
+
+
+两种方式的比较:
+    1.都可以调用到函数
+    2.第二种可以在匿名函数中定义变量,防止污染全局变量环境
+```
+
+# 28.移动端禁用和恢复默认效果
+```html
+var preventEvent=function() {
+  e.preventDefault();
+}
+    // 1.给需要禁用的地方添加touchmove事件并且阻止默认行为
+    var node = document.querySelector("body");
+        node.addEventListener("touchmove", preventEvent);
+    // 2.在点击完成后移除事件即可
+    node.removeEventListener("touchmove",preventEvent);
+
+
+
+注意点:函数不能是匿名函数,必须声明一个函数,否则不能移除事件
+```
+
+# 29.贝塞尔曲线
+```html
+1.水平方向代表的是时间t
+2.垂直方向代表的是路程(位移
+3.切线与x轴的夹角为速度,夹角越大,速度越大
+4.想越界,只需要把曲线拉至区域外,就可以做到越界回弹的效果
+```
+
+# 30.如何让图片不加载
+```html
+img标签没有src属性就不会向服务器发送图片请求
+
+1.img标签不设置src属性
+2.自定义一个属性 保存src的属性值
 ```
